[package]
name = "ringcore"
version = "0.1.0"
edition = "2024"
authors = ["RingCore Contributors"]
description = "A minimal async runtime built on Linux io_uring, designed to expose how Rust futures map to kernel I/O."
license = "MIT"
readme = "README.md"
repository = "https://github.com/sumant1122/ringcore"
keywords = ["io_uring", "async", "runtime", "linux"]
categories = ["asynchronous", "os::linux-apis"]

[dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
